fixed logo on mobile in navbar

--- a/main.css
+++ b/main.css
@@ -45,6 +45,7 @@ body.night-theme {
 .Desktop-Nav-Logo img {
     width: 160px;
     height: 70px;
+    justify-content: center;
 }
 .Desktop-Nav-Content {
     padding: 0 20 0 20;
@@ -136,7 +137,7 @@ body.night-theme {
 /* -------------------------------------------------------------------------------------------------- */
 
 .Desktop-Nav-Toggles-Mobile {
-    margin-top: 5px;
+    /* margin-top: 5px; */
     display: none;
     font-size: 1.5rem;
 }
@@ -238,8 +239,8 @@ body.night-theme {
         font-size: 1.3rem;
     }
     .Desktop-Nav-Logo img {
-        width: 100px;
-        height: 50px;
+        width: 160px;
+        height: 70px;
     }
     .Mobile-Nav-Content-Item {
         font-size: 1.2rem;
