--- a/products/product.css
+++ b/products/product.css
@@ -247,8 +247,8 @@ body.night-theme .Info-Card-Single {
         font-size: 1.3rem;
     }
     .Desktop-Nav-Logo img {
-        width: 100px;
-        height: 50px;
+        width: 160px;
+        height: 70px;
     }
     .Mobile-Nav-Content-Item {
         font-size: 1.2rem;
